--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         }
     ],
     "require-dev": {
-        "pestphp/pest": "^2.23"
+        "pestphp/pest": "^2.23",
+        "laravel/pint": "^1.13"
     },
     "config": {
         "allow-plugins": {
