--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     ],
     "require-dev": {
         "pestphp/pest": "^2.23",
-        "laravel/pint": "^1.13"
+        "laravel/pint": "^1.13",
+        "psy/psysh": "^0.11.21"
     },
     "config": {
         "allow-plugins": {
