--- a/composer.json
+++ b/composer.json
@@ -23,12 +23,13 @@
             "pestphp/pest-plugin": true
         }
     },
-    "require": {
-        "illuminate/database": "^10.28"
+    "suggest": {
+        "illuminate/database": "Allows using Eloquent query builder to run the criteria."
     },
     "require-dev": {
         "pestphp/pest": "^2.23",
         "laravel/pint": "^1.13",
-        "psy/psysh": "^0.11.21"
+        "psy/psysh": "^0.11.21",
+        "illuminate/database": "^10.28"
     }
 }
